...

        <Button
            android:id="@+id/button_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
